[gd_scene load_steps=47 format=2]

[ext_resource path="res://Art/Gertrude_Character_Sheet__Colored___1_-removebg-preview (1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/BabyIntoToddler.gd" type="Script" id=2]
[ext_resource path="res://Art/baby gertrude sprite sheet.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Aaxiaolongti.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Art/baby gilbert sprite sheet.png" type="Texture" id=5]
[ext_resource path="res://Art/Gilbert_Character_Sheet__Colored_-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Art/Gravy_Baby_Character_Sheet__Colored_-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://Art/gravy baby sprite sheet.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 256, 192, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 256, 192, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1, 11, 192, 250 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1, 259, 192, 248 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 256, 192, 256 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 4 ) ],
"loop": true,
"name": "crying",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "smiling",
"speed": 5.0
} ]

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -78, -247 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "bounce"
length = 2.0
loop = true

[sub_resource type="Animation" id=23]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 108 ), Vector2( -78, -247 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ), Vector2( 424, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.4, 0.4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -78, -247 ), Vector2( -570, 205.714 ) ]
}

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 192, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 256, 192, 256 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 68, 321.333 ) ]
}

[sub_resource type="Animation" id=29]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "fly_up"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 74.6667, 332 ), Vector2( 66, 320 ), Vector2( 66, 35.3333 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -78, -247 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "bounce"
length = 2.0
loop = true

[sub_resource type="Animation" id=20]
resource_name = "grow"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -25.3333, -54.6667 ), Vector2( -46, -110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ), Vector2( 453, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "move_to_side"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ), Vector2( 453, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -46, -110 ), Vector2( -192.667, 96.6667 ) ]
}

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 384, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 384, 256 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=37]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 68, 321.333 ) ]
}

[sub_resource type="Animation" id=38]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "fly_up"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 74.6667, 332 ), Vector2( 66, 320 ), Vector2( 66, 35.3333 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -78, -247 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "bounce"
length = 2.0
loop = true

[sub_resource type="Animation" id=42]
resource_name = "grow"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -95.3334, -39.3333 ), Vector2( -143.333, -145.333 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ), Vector2( 453, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "move_to_side"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 424, 588 ), Vector2( 453, 588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -143.333, -143 ), Vector2( -192.667, 96.6667 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1051.0
margin_bottom = 620.0
color = Color( 0.862745, 0.847059, 0.690196, 1 )

[node name="Gertrude" type="Node2D" parent="."]
position = Vector2( 401, 289 )
scale = Vector2( 0.7, 0.7 )

[node name="BabyImage" type="AnimatedSprite" parent="Gertrude"]
position = Vector2( 132.857, 85.7143 )
scale = Vector2( 2, 2 )
frames = SubResource( 22 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gertrude/BabyImage"]
anims/RESET = SubResource( 31 )
anims/fade = SubResource( 32 )

[node name="ToddlerImage" type="TextureRect" parent="Gertrude"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -78.0
margin_top = -247.0
margin_right = 346.0
margin_bottom = 341.0
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gertrude/ToddlerImage"]
autoplay = "bounce"
anims/RESET = SubResource( 3 )
anims/bounce = SubResource( 5 )
anims/grow = SubResource( 23 )
anims/move_to_side = SubResource( 24 )

[node name="Gilbert" type="Node2D" parent="."]
position = Vector2( 401, 289 )
scale = Vector2( 1.5, 1.5 )

[node name="BabyImage" type="AnimatedSprite" parent="Gilbert"]
position = Vector2( 68, 321.333 )
frames = SubResource( 27 )
frame = 1
speed_scale = 0.3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gilbert/BabyImage"]
anims/RESET = SubResource( 28 )
anims/fade = SubResource( 29 )
anims/fly_up = SubResource( 33 )

[node name="ToddlerImage" type="TextureRect" parent="Gilbert"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -78.0
margin_top = -247.0
margin_right = 375.0
margin_bottom = 341.0
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gilbert/ToddlerImage"]
autoplay = "bounce"
anims/RESET = SubResource( 18 )
anims/bounce = SubResource( 19 )
anims/grow = SubResource( 20 )
anims/move_to_side = SubResource( 21 )

[node name="Gravy" type="Node2D" parent="."]
position = Vector2( 526, 281 )
scale = Vector2( 1.5, 1.5 )

[node name="BabyImage" type="AnimatedSprite" parent="Gravy"]
position = Vector2( 68, 321.333 )
frames = SubResource( 36 )
frame = 1
speed_scale = 0.3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gravy/BabyImage"]
anims/RESET = SubResource( 37 )
anims/fade = SubResource( 38 )
anims/fly_up = SubResource( 39 )

[node name="ToddlerImage" type="TextureRect" parent="Gravy"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -78.0
margin_top = -247.0
margin_right = 346.0
margin_bottom = 348.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gravy/ToddlerImage"]
autoplay = "bounce"
anims/RESET = SubResource( 40 )
anims/bounce = SubResource( 41 )
anims/grow = SubResource( 42 )
anims/move_to_side = SubResource( 43 )

[node name="StatsText" type="VBoxContainer" parent="."]
margin_left = 656.0
margin_top = 71.0
margin_right = 1011.0
margin_bottom = 403.0

[node name="NameText" type="Label" parent="StatsText"]
visible = false
margin_top = -100.0
margin_right = 355.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "GERTRUDE:"

[node name="TextAnimation" type="Tween" parent="StatsText/NameText"]

[node name="StatText1" type="Label" parent="StatsText"]
visible = false
margin_right = 355.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "will probably rule the world one day"
autowrap = true

[node name="TextAnimation" type="Tween" parent="StatsText/StatText1"]

[node name="StatText2" type="Label" parent="StatsText"]
visible = false
margin_right = 355.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "will probably rule the world one day"
autowrap = true

[node name="TextAnimation" type="Tween" parent="StatsText/StatText2"]

[node name="StatText3" type="Label" parent="StatsText"]
visible = false
margin_right = 355.0
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "will probably rule the world one day"
autowrap = true

[node name="TextAnimation" type="Tween" parent="StatsText/StatText3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatsText"]
anims/RESET = SubResource( 30 )
anims/fade_out = SubResource( 9 )

[node name="ContinueButton" type="Button" parent="."]
visible = false
margin_left = 416.0
margin_top = 488.0
margin_right = 574.0
margin_bottom = 568.0
text = "Continue to Next Stage"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
